--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,6 +11,8 @@
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    
+    <link type="text/html" rel="stylesheet" href="../node_modules/ngx-bar-rating/themes/br-stars-theme.css"/>         
 </head>
 <body class="sidebar-collapse">
     <app-root></app-root>
